# PulseOS

./: .gitignore  LAUNCH-NODOMAIN.md  LAUNCH.md  PATCH-1-feed-ranking.md  PATCH-2-automation.md  README-ROADMAP.md  README.md  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: d91d6ce6948e_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  billing.py  briefings.py  chat.py  council.py  feed.py  iap.py  memory.py  opportunities.py  router.py  search.py  uploads.py
backend/app/core/: bootstrap.py  config.py  db.py  events.py  limits.py  ratelimit.py  security.py
backend/app/council/: ai_gateway.py  confidence.py  orchestrator.py  prompts.py  verification.py
backend/app/feed/: __init__.py  ranking.py
backend/app/ingestion/: connectors.py  pipeline.py
backend/app/models/: __init__.py
backend/app/repositories/: briefings.py  chat.py  council.py  memory.py  opportunities.py  posts.py  search.py  users.py
backend/app/schemas/: __init__.py
backend/app/services/: auth_service.py  briefing_service.py  chat_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: seed.py
backend/tests/: test_api_wiring.py  test_auth_security.py  test_council.py  test_council_pipeline.py
frontend/: .env.example  capacitor.config.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/lib/: api.ts  (+6 more)
infra/: .env.example  Caddyfile  docker-compose.prod.yml  docker-compose.yml  rls-policies.sql
(+51 files in other folders)
