[project]
name = "pulseos-backend"
version = "0.1.0"
description = "PulseOS backend — FastAPI intelligence platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.2.5",
    "redis>=5.0",
    "celery>=5.4",
    "kombu>=5.3",
    "opensearch-py>=2.6",
    "argon2-cffi>=23.1",
    "pyjwt[crypto]>=2.8",
    "webauthn>=2.1",
    "httpx>=0.27",
    "anthropic>=0.40",
    "stripe>=9.0",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.25",
    "prometheus-client>=0.20",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "hypothesis>=6.100", "testcontainers>=4.5", "ruff>=0.4", "mypy>=1.10"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
